--- a/css/editorial.css
+++ b/css/editorial.css
@@ -28,10 +28,10 @@ p{
 }
 @media only screen and (max-width: 500px) {
   h1,h2{
-    font-size: 50%;
+    font-size: 2rem;
   }
   p{
-    font-size: 15px;
+    font-size: .8rem;
   }
 
 }
