--- a/css/editorial.css
+++ b/css/editorial.css
@@ -26,6 +26,9 @@ p{
 .marg-4b{
   margin-bottom: 4%;
 }
+.dorado{
+  color:#c1b009;
+}
 @media only screen and (max-width: 500px) {
   h1,h2{
     font-size: 2rem;
