arreglo de logo movil

--- a/css/formas.css
+++ b/css/formas.css
@@ -48,4 +48,10 @@
     margin-top: 2%;
     margin-bottom: 2%;
   }
+  .logo{
+    -ms-flex-preferred-size: 15%;
+    -webkit-flex-basis: 15%;
+    flex-basis: 15%;
+    max-width: 15%;
+  }
 }
